--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "node ./build.js"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
